Fix some older themes that had style errors.

--- a/themes/silkyroom/style.css
+++ b/themes/silkyroom/style.css
@@ -44,7 +44,7 @@ table.post td.post
 	background: #200;
 }
 
-button, input, select
+button, input, select, textarea
 {
 	background: #704;
 	color: #FFF;
