--- a/plugins/mctitles/mctitles.css
+++ b/plugins/mctitles/mctitles.css
@@ -7,8 +7,9 @@
 	-ms-transform-origin: bottom center;
 	display: inline-block;
 	position: relative;
-	top: -30px;
+	top: -20px;
 	left: -240px;
+	font-family:monospace;
 	font-size: 20px;
 	color: yellow;
 	text-shadow: 2px 2px 0px #000;
@@ -36,27 +37,9 @@
 
 @keyframes animateMcTitle {
 	from {
-		transform: rotate(-20deg) scale(1);
+		transform: rotate(-10deg) scale(1);
 	}
 	to {
-		transform: rotate(-20deg) scale(1.1);
-	}
-}
-
-@-webkit-keyframes animateMcTitle {
-	from {
-		-webkit-transform: rotate(-20deg) scale(1);
-	}
-	to {
-		-webkit-transform: rotate(-20deg) scale(1.1);
-	}
-}
-
-@-ms-keyframes animateMcTitle {
-	from {
-		-ms-transform: rotate(-20deg) scale(1);
-	}
-	to {
-		-ms-transform: rotate(-20deg) scale(1.1);
+		transform: rotate(-10deg) scale(1.1);
 	}
 }
