--- a/css/common.css
+++ b/css/common.css
@@ -378,7 +378,7 @@ ul.breadcrumbs li
 }
 ul.breadcrumbs li:before
 {
-	content:"\187 ";
+	content:"\00bb  ";
 }
 
 ul.breadcrumbs li:first-child:before
